# UAV_Project

./: .gitignore  CLAUDE.md  Makefile  PROJECT_PLAN.md  README.md  TASK_PROMPTS.md  pyproject.toml
configs/: config.yaml
configs/coordination/: default.yaml
configs/datasets/: default.yaml  taxonomy.yaml
configs/drift/: default.yaml
configs/eval/: sweep.yaml
configs/perception/: eval.yaml  model_a.yaml  model_b.yaml
configs/scenario/: flood_a.yaml
configs/sim/: oracle.yaml  uav.yaml  world.yaml
docs/: BUILD_LOG.md  JOURNAL.md  PROGRESS_REPORT.md  ROADMAP.md  datasets.md  reading_list.md  research_questions.md
docs/adr/: ADR-001-decouple-perception-from-coordination.md  ADR-002-two-perception-models.md  README.md
notebooks/: README.md  train_yolo11_colab.ipynb
scripts/: train_progress.py
src/: __init__.py
src/coordination/: __init__.py  allocation.py  coverage.py  partition.py
src/drift/: __init__.py  advect.py
src/eval/: __init__.py  metrics.py  runner.py
src/perception/: __init__.py  detect_cache.py  eval.py  train.py
src/perception/datasets/: __init__.py  build.py  loaders.py  masks.py  model.py  taxonomy.py
src/routing/: __init__.py  graph.py  safe_path.py
src/sim/: __init__.py  engine.py  oracle.py  uav.py  world.py
tests/: __init__.py  conftest.py  test_allocation.py  test_build.py  test_coverage.py  test_detect_cache.py  test_drift.py  test_engine.py  test_loaders.py  test_masks.py  test_metrics.py  test_oracle.py  test_partition.py  test_runner.py  test_sim_isolation.py  test_taxonomy.py  test_uav.py  test_world.py
tests/fixtures/: __init__.py  synthetic.py
