[project]
name = "uav-disaster-response"
version = "0.1.0"
description = "Multi-UAV AI framework for disaster response — simulation-based (MSc dissertation, LSBU)."
readme = "README.md"
requires-python = ">=3.10,<3.11"
authors = [{ name = "Student 4437147" }]

# Core deps: needed for coordination/sim/drift/routing and Phase-1 dataset unification.
# Deliberately excludes torch/GDAL so `make setup` stays fast and CPU-only (see ADR-001).
dependencies = [
    # configuration — Hydra YAML under configs/ (CLAUDE.md conventions)
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    # arrays / tabular / io
    "numpy>=1.26,<2.0",       # <2.0 keeps binary compat with the geo/cv stacks
    "scipy>=1.11",
    "pandas>=2.1",
    "pyarrow>=15.0",          # detections.parquet (Phase 3) and tidy sweep output (Phase 9)
    # dataset unification (Phase 1)
    "pillow>=10.2",           # read source imagery / segmentation masks
    "shapely>=2.0",           # mask -> YOLO-seg polygon geometry
    "scikit-image>=0.22",     # sub-pixel contour extraction from masks
]

[project.optional-dependencies]
# Geospatial + routing (Phase 3 georeferencing, Phase 8 routing). Pulls GDAL via pyproj.
geo = [
    "geopandas>=0.14",
    "pyproj>=3.6",
    "osmnx>=1.9",
]
# Offline perception (Phase 2-3). GPU-heavy; install only on the training machine.
perception = [
    "torch>=2.2",
    "ultralytics>=8.3",
    "sahi>=0.11",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100          # CLAUDE.md convention
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# ruff defaults (E, F) plus import-sorting (I) and pyupgrade (UP) — cheap, high-signal.
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]          # repo root on sys.path: import src.* and tests.fixtures.*
addopts = "-ra"
markers = [
    "slow: GPU- or dataset-dependent tests; excluded from `make test` (CLAUDE.md Testing)",
]
